--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -1,4 +1,33 @@
+
 Admin dashboard here
 
 <a class="btn btn-warning btn-lg mt-2 mb-2" href="{% url 'create_blog_post' %}">New Post</a>
+
+<div class="d-flex justify-content-between align-items-center">
+    <p class="lead ml-0">My Films</p>
+    <form hx-post="{% url 'add-category' %}" hx-target='#category-list' class="d-flex align-items-center">
+        {% csrf_token %}
+        <input type="text" 
+            id="filmname-input"
+            name="categoryname" 
+            class="form-control-sm mr-2" 
+            placeholder="Enter a film" />
+        <button type="submit" class="btn btn-success btn-sm">Add Category</button>
+    </form>
+</div>
+<hr/>
+
+<div class="d-flex justify-content-between">
+    <section id="category-list" class="col-12">
+<section class="col-6">
+
+   
+
+   
+
+</section>
+</section>
+
+
+</div>
 
