--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,9 @@
     {% endblock %}
 
     <title>Electric Dreams {% block extra_title %}{% endblock %}</title>
+    <script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     <header class="container-fluid fixed-top"></header>
 
     {% if messages %}
