--- a/blog/templates/blog/HTMXsnippets/categories-list.html
+++ b/blog/templates/blog/HTMXsnippets/categories-list.html
@@ -1,14 +1,15 @@
-<div id="categories"
-    hx-confirm="Are you sure you want to delete this task?"
-  hx-target="#categories"
-  hx-swap="outerHTML">
-    {% for category in categories %}
-      <div>{{ forloop.counter }} {{ category.name }}
-        <a class="block mr-2 hover:text-gray-600"
-        hx-delete="{% url 'delete_blog_category' task.id %}">
-        Delete?
-      </a>iv>
-    {% endfor %}
-  </div>
 
   
+  <div id="categories"
+ >
+  {% for category in categories %}
+    <div>{{ forloop.counter }} {{ category.name  }}
+        <span 
+        style="cursor: pointer;"
+        hx-delete="{% url 'delete-category' category.id %}"
+        hx-target="#categories"
+        hx-confirm="Are you sure you wish to delete?">X</span>
+    </div>
+  {% endfor %}
+</div>
+
