--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
   <head>
     {% block meta %}
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +15,7 @@
 
     {% block corecss %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
   
