--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     <title>Electric Dreams {% block extra_title %}{% endblock %}</title>
     
   </head>
-  <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+  <body >
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
