--- a/blog/templates/blog/blogindex.html
+++ b/blog/templates/blog/blogindex.html
@@ -2,6 +2,14 @@
 {% load static %}
 
 {% block content %}
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <h1 class="display-4 text-success">It blogs!</h1>
 
 
@@ -9,7 +17,7 @@
 
 <div class="d-flex justify-content-between align-items-center">
     <p class="lead ml-0">My Films</p>
-    <form hx-post="{% url 'add-category' %}" hx-target='#category-list' class="d-flex align-items-center">
+    <form hx-post="{% url 'add-category' %}" hx-target='#categories' class="d-flex align-items-center">
         {% csrf_token %}
         <input type="text" 
             id="filmname-input"
@@ -21,19 +29,23 @@
 </div>
 <hr/>
 
-<div class="d-flex justify-content-between">
-    <section id="category-list" class="col-12">
-<section class="col-6">
+<div>
   
-    <h1>Tasks</h1>
+    <h1>Cats:</h1>
     {% include "blog/HTMXsnippets/categories-list.html" %}
 
-   
 
-   
+</div>
 
-</section>
-</section>
+
+<br>
+<br>
+<br>
+
+<div>
+  
+    <h1>Blogs:</h1>
+    {% include "blog/HTMXsnippets/posts-list.html" %}
 
 
 </div>
