--- a/blog/templates/blog/HTMXsnippets/categories-list.html
+++ b/blog/templates/blog/HTMXsnippets/categories-list.html
@@ -1,6 +1,6 @@
 
   
-  <div id="categories" hx-confirm="Are you sure you want to delete this task?"
+  <div id="categories" hx-confirm="Are you sure you want to delete this category?"
   hx-target="#categories"
   hx-swap="outerHTML">
   {% for category in categories %}
