--- a/blog/templates/blog/HTMXsnippets/categories-list.html
+++ b/blog/templates/blog/HTMXsnippets/categories-list.html
@@ -1,17 +1,41 @@
 
   
-  <div id="categories" hx-confirm="Are you sure you want to delete this category?"
+  <div id="categories"
   hx-target="#categories"
   hx-swap="outerHTML">
   {% for category in categories %}
     <div>{{ forloop.counter }} {{ category.name  }}
        
         
-        <a class="block mr-2 hover:text-gray-600"
-        hx-delete="{% url 'delete-category' category.id %}">
-        Delete?
-      </a>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+      </button>
     </div>
+
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete the blog category titled:</p>
+                <p>"<strong>{{ category.name }}</strong>"</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a class="btn" hx-delete="{% url 'delete-category' category.id %}" data-bs-dismiss="modal">Delete Blog Post</a>
+      </div>
+    </div>
+  </div>
+</div>
   {% endfor %}
 </div>
+
+
+
+
+
 
