--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {% endblock %}
 
     <script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Electric Dreams</title>
 
@@ -31,6 +31,10 @@
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     {% include "includes/navbar.html" %}
     <h1>Hello, world!</h1>
+    
+    
+
+
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
@@ -59,9 +63,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
     </script>
+   
     <script src="https://js.stripe.com/v3/"></script>
     {% block extra_js %}
     {% endblock %}
+
+   
+    
+
+
 </body>
 
 </html>
