--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,18 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
-{% endblock %}
-
-{% block page_header %}
-  
-{% endblock %}
 
 {% block content %}
-   
+   Here
 {% endblock %}
 
-{% block postloadjs %}
-   
-{% endblock %}
