--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,18 +1,39 @@
-<nav class="py-2 bg-light border-bottom">
-    <div class="container d-flex flex-wrap">
-      <ul class="nav me-auto">
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2 active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">About</a></li>
+<header class="p-3 text-bg-dark">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+      </a>
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        Free shipping over €50!
       </ul>
-      <ul class="nav">
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Login</a></li>
-        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Sign up</a></li>
-      </ul>
+
+      
+
+      <div class="text-end">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'profile' %}" class="nav-link px-2 text-white">My Profile</a></li>
+
+        <li><a href="{% url 'account_logout' %}" class="nav-link px-2 text-white">Log Out</a></li>
+            
+          
+          {% else %}
+         
+          <li><a href="{% url 'account_login' %}" class="nav-link px-2 text-white">Log In</a></li>
+            <li><a href="{% url 'account_signup' %}" class="nav-link px-2 text-white">Register</a></li>
+         
+         
+           
+           
+        
+          {% endif %}
+        </ul>
+      </div>
     </div>
-  </nav>
+  </div>
+</header>
   <header class="py-3 mb-4 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center">
       <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
