Update privacy policy template page

--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -2,8 +2,10 @@
 {% load static %}
 
 {% block content %}
-
-<p> Electric Dreams Privacy Policy</p>
+<div class="container">
+    <br>
+<br>
+<h1> Electric Dreams Privacy Policy</h1>
 
 This Privacy Policy describes how your personal information is collected, used, and shared when you visit or make a purchase from electric-dreams.herokuapp.com (the “Site”).
 <br>
@@ -91,5 +93,7 @@ CONTACT US
 For more information about our privacy practices, if you have questions, or if you would like to make a complaint, please contact us by e-mail at projects@neilboland.com or by mail using the details provided below:
 
   1 Main St, Dublin, D, Ireland
-
+  <br>
+<br>
+</div>
   {% endblock %}
