--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,5 @@
 <div class="container-fluid bg-light">
+  <div class="container">
     <footer class="py-5">
       <div class="row">
         <div class="col-6 col-md-2 mb-3">
@@ -56,4 +57,5 @@
         </ul>
       </div>
     </footer>
+  </div>
   </div>
