Add dynamic menu drop down items to refelect blog and product categories

--- a/blog/templates/blog/HTMXsnippets/categories-edit.html
+++ b/blog/templates/blog/HTMXsnippets/categories-edit.html
@@ -1,10 +1,10 @@
 <form
-    hx-post="/edit/{{ todo.id }}/"
+hx-get="{% url 'edit-category' category.id %}"
     hx-target="closest article"
     hx-swap="outerHTML"
     class="flex"
 >
-    <input class="flex-1 mr-4 px-6 text-xs text-gray-900 border-0" type="text" name="title" value="{{ todo.title }}" autofocus>
+    <input class="flex-1 mr-4 px-6 text-xs text-gray-900 border-0" type="text" name="title" value="{{ category.name }}" autofocus>
 
     <button class="text-sky-600 hover:text-sky-900">Save</button>
 </form>
