--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,49 +21,60 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Electric <i class="bi bi-lightning-charge-fill"></i> Dreams</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Electric <i class="bi bi-lightning-charge-fill"></i> Dreams</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Shop
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">All Products</a></li>
-            <li><a class="dropdown-item" href="#">Poster</a></li>
-            <li><a class="dropdown-item" href="#">Sculpture</a></li>
-            <li><a class="dropdown-item" href="#">Scientists</a></li>
+            <li><a class="dropdown-item" href="{% url 'products' %}">All Products</a></li>
            
+            {% for product_category in product_category_list %}
+            <li><a class="dropdown-item" href="/category/{{ product_category.id}}">
+              {{ product_category.name }}
+            </a>
+          </li>
+            {% endfor %}
   
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Request Artwork</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Gallery</a>
-        </li>
+      
        
+
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Blog
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Guides</a></li>
-            <li><a class="dropdown-item" href="#">Poetry Corner</a></li>
-  
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{% url 'blog' %}">All Posts</a></li>
+            <!-- get list of categories from database -->
+            {% for category in blog_category_list %}
+            <li><a class="dropdown-item" href="/category/{{ category.id}}">
+              {{ category.name }}
+            </a>
+          </li>
+            {% endfor %}
           </ul>
         </li>
+
+       
+
       </ul>
       <ul class="navbar-nav ms-auto">
        
-     <li> <a href="#" class="nav-link px-2"><i class="bi bi-search"></i> Search  </a> </li>
+     <li> <a href="{% url 'search_page' %}" class="nav-link px-2"><i class="bi bi-search"></i> Search  </a> </li>
 
      <li><a href="#" class="nav-link px-2"> Cart: <i class="bi bi-bag-fill"></i> €3.99 </a> </li>
       </ul>
