Update URL paths and blog index to allow category views

--- a/blog/templates/blog/categoryindex.html
+++ b/blog/templates/blog/categoryindex.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% load cloudinary %}
 
 {% block content %}
 
-    <h4 class="display-6 fw-bold py-4 text-center">{{categorylist.cat}} Blog Posts</h4>
+    <h4 class="display-6 fw-bold py-4 text-center">{{categorylist.cat}} Posts</h4>
   
 
     <div class="album py-5 bg-light">
