Add code for HTMX update of wishlist item add/remove

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -8,5 +8,12 @@
    <button type="submit">delete account</button>
 </form>
    {{profile.email}}
+
+   <br>
+One
+   {% for wish in wishlist %}
+   {{wish.product.name}}
+   {% endfor %}
+Two
 {% endblock %}
 
