--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,6 +42,11 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    <br>
+                    Wishlist Box:
+<br>
+    {% include "products/includes/wishlist-snippet.html" %}
+
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
                             <a href="{% url 'edit_product' product.id %}">Edit</a> | 
