Extend blog template and fix stripe JS code

--- a/blog/templates/blog/blogindex.html
+++ b/blog/templates/blog/blogindex.html
@@ -25,6 +25,8 @@
                   <p class="card-text">{{post.title}}</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
+                      <a href="{{ post.get_absolute_url }}">Link</a>
+                      HERE
                       <button type="button" class="btn btn-sm btn-outline-secondary">View Post</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
