--- a/blog/templates/blog/blog_post_detail.html
+++ b/blog/templates/blog/blog_post_detail.html
@@ -6,7 +6,7 @@
 
 
 <div class="px-4 py-5 my-5">
-    <img class="d-block mx-auto mb-4" src="{{ blogpost.image.url }}" alt="" >
+    <img class="d-block mx-auto mb-4 img-fluid" src="{{ blogpost.image.url }}" alt="" >
     <h1 class="display-5 fw-bold text-center">{{blogpost.title}}</h1>
     <div class="col-lg-6 mx-auto">
       <p class="mb-4">{{ blogpost.post_text }}</p>
