--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -2,7 +2,7 @@
 <nav class="bg-dark border-bottom">
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
-      <li class="nav-item text-white p-2 d-none d-lg-block">Free shipping when you spend €50!</li>
+      <li class="nav-item text-white py-2 d-none d-lg-block">Free shipping when you spend €50!</li>
       
     </ul>
     <ul class="nav">
