--- a/blog/templates/blog/blog_post_form.html
+++ b/blog/templates/blog/blog_post_form.html
@@ -28,7 +28,7 @@
                 </div>
                <!-- cancel and return to reviews -->
                 <div class="d-grid">
-                  <a class="btn btn-warning btn-lg mt-2 mb-2" href="{% url 'dashboard' %}">Cancel</a>
+                  <a class="btn btn-warning btn-lg mt-2 mb-2" href="{% url 'home' %}">Cancel</a>
                 </div>
               </div>
             </form>
