--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -31,7 +31,7 @@
                             name="categoryname" 
                             class="form-control-sm m-2" 
                             placeholder="Enter a category name:" />
-                        <button type="submit" class="btn btn-success btn-sm">Add New Category</button>
+                        <button type="submit" class="btn btn-success btn-sm " >Add New Category</button>
                     </form>
                 </div>
 
@@ -40,6 +40,38 @@
             </div>
             <div class="col-md-6"><h2>Posts</h2>
 
+                <a class="btn btn-warning  mt-2 mb-1" href="{% url 'create_blog_post' %}">New Post</a>
+
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Post</th>
+                           
+                        </tr>
+                    </thead>
+                    <tbody>
+                 
+                  
+                
+                {% for post in posts %}
+
+                <tr><td>
+
+                {{ post.title }}
+
+                <a class="btn btn-success " href="{% url 'create_blog_post' %}">View</a>
+
+                <a class="btn btn-warning" href="{% url 'create_blog_post' %}">Edit</a>
+
+                <a class="btn btn-danger" href="{% url 'create_blog_post' %}">Delete</a>
+
+                </td>
+                </tr>
+
+                {% endfor %}
+</tbody>
+</table>
 
             </div>
           </div>
