Add blog update view and links to blog management page

--- a/blog/templates/blog/HTMXsnippets/posts-list.html
+++ b/blog/templates/blog/HTMXsnippets/posts-list.html
@@ -1,9 +1,32 @@
-<div id="posts" 
->
+
+
+
+<table class="table">
+  <thead>
+      <tr>
+          <th scope="col">Post</th>
+         
+      </tr>
+  </thead>
+  <tbody>
+
+
+
 {% for post in posts %}
-  <div>{{ forloop.counter }} {{ post.title  }}
-     
-     
-  </div>
+
+<tr><td>
+
+{{ post.title }}
+
+<a class="btn btn-success " href="{{ post.get_absolute_url }}">View</a>
+
+<a class="btn btn-warning" href="{% url 'edit_blog_post' post.id %}">Edit</a> 
+
+<a class="btn btn-danger" href="{% url 'create_blog_post' %}">Delete</a>
+
+</td>
+</tr>
+
 {% endfor %}
-</div>
+</tbody>
+</table>
