--- a/blog/templates/blog/blog_post_detail.html
+++ b/blog/templates/blog/blog_post_detail.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="m-4 text-muted text-center">
-       Category: {{blogpost.category.name}}
+       Published: {{ blogpost.published_on }}
       </div>
     </div>
   </div>
