--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -42,37 +42,8 @@
 
                 <a class="btn btn-warning  mt-2 mb-1" href="{% url 'create_blog_post' %}">New Post</a>
 
-
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Post</th>
-                           
-                        </tr>
-                    </thead>
-                    <tbody>
-                 
-                  
+                {% include "blog/HTMXsnippets/posts-list.html" %}
                 
-                {% for post in posts %}
-
-                <tr><td>
-
-                {{ post.title }}
-
-                <a class="btn btn-success " href="{% url 'create_blog_post' %}">View</a>
-
-                <a class="btn btn-warning" href="{% url 'create_blog_post' %}">Edit</a>
-
-                <a class="btn btn-danger" href="{% url 'create_blog_post' %}">Delete</a>
-
-                </td>
-                </tr>
-
-                {% endfor %}
-</tbody>
-</table>
-
             </div>
           </div>
 
