--- a/blog/templates/blog/HTMXsnippets/posts-list.html
+++ b/blog/templates/blog/HTMXsnippets/posts-list.html
@@ -1,5 +1,7 @@
 
-
+<div id="postlist"
+hx-target="#postlist"
+hx-swap="outerHTML">
 
 <table class="table">
   <thead>
@@ -22,10 +24,33 @@
 
 <a class="btn btn-warning" href="{% url 'edit_blog_post' post.id %}">Edit</a> 
 
-<a class="btn btn-danger" href="{% url 'create_blog_post' %}">Delete</a>
+
+
+<button type="button" class="btn btn-danger px-3" data-bs-toggle="modal" data-bs-target="#postModal-{{ post.id}}">
+  Delete
+</button>
 
 </td>
 </tr>
+
+  <!-- Modal -->
+  <div class="modal fade" id="postModal-{{ post.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Warning!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete the blog post?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <a class="btn btn-danger" hx-delete="{% url 'delete-blog-post' post.id %}" data-bs-dismiss="modal">Delete</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endfor %}
 </tbody>
