Add correct links to header menu for management dashboard

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,10 +16,10 @@
           Manage Site
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="{% url 'blog' %}">Manage Products</a></li>
-          <li><a class="dropdown-item" href="{% url 'blog' %}">Manage Blog</a></li>
-          <li><a class="dropdown-item" href="{% url 'blog' %}">Customer Orders</a></li>
-          <li><a class="dropdown-item" href="{% url 'blog' %}">Custom Requests</a></li>
+          <li><a class="dropdown-item" href="{% url 'manage_products' %}">Manage Products</a></li>
+          <li><a class="dropdown-item" href="{% url 'manage_orders' %}">Customer Orders</a></li>
+          <li><a class="dropdown-item" href="{% url 'manage_blog' %}">Manage Blog</a></li>
+          <li><a class="dropdown-item" href="{% url 'manage_requests' %}">Custom Requests</a></li>
          
           
         </ul>
