Change from custom modal to dialog confirm box to simplify code

--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -35,16 +35,85 @@
                     </form>
                 </div>
 
-                {% include "blog/HTMXsnippets/categories-list.html" %}
+                <table class="table delete-row-example">
+                    <thead>
+                      <tr>
+                        
+                        <th>Name</th>
+                       
+                        <th></th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML">
+                        {% for category in categories %}
+                        <tr>
+                            <td>{{ category.name}}</td>
+                           
+                           
+                            <td>
+                                <a class="btn btn-warning btn-sm" href="">Edit</a> 
+                            </td>
+                            <td>
+                              <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete-category' category.id %}">
+                                Delete
+                              </button>
+                            </td>
+                          </tr>
+            
+            
+                        {% endfor %}
+                    </tbody>
+                  </table>
                 
             </div>
             <div class="col-md-6"><h2>Posts</h2>
 
                 <a class="btn btn-warning  mt-2 mb-1" href="{% url 'create_blog_post' %}">New Post</a>
 
-                {% include "blog/HTMXsnippets/posts-list.html" %}
+              
+
+
+                <table class="table delete-row-example">
+                    <thead>
+                      <tr>
+                        
+                        <th>Title</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML">
+                        {% for post in posts %}
+                        <tr>
+                            <td>{{ post.title}}</td>
+                           
+                            <td>
+                                <a class="btn btn-success btn-sm" href="{{ post.get_absolute_url }}">View</a>
+                            </td>
+                            <td>
+                                <a class="btn btn-warning btn-sm" href="{% url 'edit_blog_post' post.id %}">Edit</a> 
+                            </td>
+                            <td>
+                              <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete-blog-post' post.id %}">
+                                Delete
+                              </button>
+                            </td>
+                          </tr>
+            
+            
+                        {% endfor %}
+                    </tbody>
+                  </table>
                 
             </div>
+
+
+
+
+
+
           </div>
 
 
