--- a/dashboard/templates/dashboard/manage_products.html
+++ b/dashboard/templates/dashboard/manage_products.html
@@ -25,7 +25,7 @@
 
 
 
-        <table class="table delete-row-example">
+        <table class="table">
         <thead>
           <tr>
             <th>Name</th>
@@ -43,7 +43,7 @@
                 <td>{{product.price}}</td>
                 <td>{{product.category.name}}</td>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="" role="button">View</a>
+                    <a class="btn btn-primary btn-sm" href="{% url 'product_detail' product.id %}" role="button">View</a>
                 </td>
                 <td>
                     <a class="btn btn-primary btn-sm" href="#" role="button">Edit</a>
